@@ -1,5 +1,8 @@
 Changes with APR-util 1.3.0
 
+  *) Add support for Berkeley DB 4.5 to the configure scripts.
+     [Garrett Rooney]
+
   *) Allow apr_queue.h to be included before other APR headers.
      PR 40891 [Henry Jen <henryjen ztune.net>]
 
